--- a/Hair/index.html
+++ b/Hair/index.html
@@ -140,11 +140,17 @@ https://templatemo.com/tm-586-scholar
 
 
 
-  <div class="section testimonials">
+  <div class="section testimonials" dir="rtl">
     <div class="container">
       <div class="row">
-
-        <div class="col-lg-7">
+        <div class="col-lg-5 align-self-center">
+          <div class="section-heading" dir="rtl">
+            <h6>مميزاتنا</h6>
+            <h2>ماالذي ننفرد به؟</h2>
+            <p>اعرف اكتر عن مميزاتنا</p>
+          </div>
+        </div>
+        <div class="col-lg-7" dir="ltr">
           <div class="owl-carousel owl-testimonials">
             <div class="item">
               <p dir="rtl">- سهل الاستخدام
@@ -189,13 +195,7 @@ https://templatemo.com/tm-586-scholar
             </div>
           </div>
         </div>
-        <div class="col-lg-5 align-self-center">
-          <div class="section-heading" dir="rtl">
-            <h6>مميزاتنا</h6>
-            <h2>ماالذي ننفرد به؟</h2>
-            <p>اعرف اكتر عن مميزاتنا</p>
-          </div>
-        </div>
+      
       </div>
     </div>
   </div>
